feat: 12 cuboids version 1

--- a/src/12-cuboids/dev.pug
+++ b/src/12-cuboids/dev.pug
@@ -15,7 +15,7 @@ mixin cuboid(className)
   .plane
     - let c = 0
     while c < 12
-      .cuboid-wrapper
-        .cuboid-spinner
+      .cuboid__wrapper
+        .cuboid__spinner
           +cuboid()
       - c++
