--- a/src/spoopy-ghost/style.styl
+++ b/src/spoopy-ghost/style.styl
@@ -7,12 +7,22 @@ body
   justify-content center
   background hsl(280, 50%, 10%)
   min-height 100vh
+  overflow hidden
+
+h1
+  margin 0
+  position fixed
+  bottom 1rem
+  right 1rem
+  color hsl(280, 50%, 30%)
+  font-family sans-serif
+  font-size 2rem
 
 .ghost
-  height 50vmin
+  height 25vmin
   overflow visible
-  &__ghost
-    display none
+  // &__ghost
+  //   display none
   &__cheeks
     fill hsl(0, 80%, 85%)
   &__pupil
@@ -45,13 +55,14 @@ body
     fill hsl(0, 80%, 50%)
 
 .sweet
+  display none
   &--lolly
     path
       fill hsl(0, 0%, 95%)
     circle
-      fill 'hsl(%s, 80%, 50%)' % var(--hue, 0)
+      fill 'hsl(%s, 70%, 50%)' % var(--hue, 0)
   &--sweet
     path
-      fill 'hsl(%s, 80%, 20%)' % var(--hue, 0)
+      fill 'hsl(%s, 70%, 20%)' % var(--hue, 0)
     circle
-      fill 'hsl(%s, 80%, 50%)' % var(--hue, 0)
+      fill 'hsl(%s, 70%, 50%)' % var(--hue, 0)
