feat: bear updates

--- a/src/bear-darkmode-toggle/index.pug
+++ b/src/bear-darkmode-toggle/index.pug
@@ -4,3 +4,4 @@ block content
   script(src='gsap.min.js')
   script(src='Draggable.min.js')
   script(src='MorphSVGPlugin.min.js')
+  script(src="GSDevTools.min.js")
