--- a/src/bear-darkmode-toggle/style.styl
+++ b/src/bear-darkmode-toggle/style.styl
@@ -40,7 +40,7 @@ input
 
 .toggle-scene
   // !important for CodePen
-  overflow visible !important
+  // overflow visible !important
   width 25vmin
   position absolute
 
@@ -86,8 +86,6 @@ input
       stroke var(--stroke)
 
 .bear
-  &__arm
-    display none
   &__fur
     fill orange
     fill #784421
