--- a/src/bear-darkmode-toggle/light.pug
+++ b/src/bear-darkmode-toggle/light.pug
@@ -1,4 +1,4 @@
-svg(class="toggle-scene" xmlns='http://www.w3.org/2000/svg' preserveaspectratio='xMinYMin' viewBox='0 0 197.451 481.081')
+svg(class="toggle-scene" xmlns='http://www.w3.org/2000/svg' preserveaspectratio='xMinYMin' viewBox='0 0 197.451 581.081')
   defs
     marker#e(orient='auto' overflow='visible' refx='0' refy='0')
       path.toggle-scene__cord-end(fill-rule='evenodd' stroke-width='.2666' d='M.98 0a1 1 0 11-2 0 1 1 0 012 0z')
@@ -42,4 +42,5 @@ svg(class="toggle-scene" xmlns='http://www.w3.org/2000/svg' preserveaspectratio=
     g(transform='translate(905.657 -597.025)')
       path(fill='transparent' d='M-868.418 945.051c-4.188 73.011 78.255 53.244 150.216 52.941 82.387-.346 98.921-19.444 98.921-47.058 0-27.615-4.788-42.55-73.823-42.55-69.036 0-171.436-30.937-175.314 36.667z')
       ellipse(cx='804.83' cy='950.986' fill='transparent' rx='29.911' ry='29.414' transform='scale(-1 1)')
-    path.toggle-scene__paw.bear__fur(clip-path='url(#f)' d='M-798.725 945.051c4.188 73.011-78.254 53.244-150.215 52.941-82.387-.346-98.922-19.444-98.922-47.058 0-27.615 4.788-42.55 73.824-42.55 69.035 0 171.436-30.937 175.313 36.667z' transform='translate(905.657 -597.025)')
+    g(clip-path='url(#f)' transform='translate(905.657 -597.025)')
+      path.toggle-scene__paw.bear__paw.bear__fur(d='M-798.725 945.051c4.188 73.011-78.254 53.244-150.215 52.941-82.387-.346-98.922-19.444-98.922-47.058 0-27.615 4.788-42.55 73.824-42.55 69.035 0 171.436-30.937 175.313 36.667z')
