feat: wave configurator updates

--- a/src/configurable-waves-v2/dev.pug
+++ b/src/configurable-waves-v2/dev.pug
@@ -1,8 +1,9 @@
 mixin wave()
   .wave
-main
-  +wave()
-  +wave()
-  +wave()
-footer
-include wave.pug
+svg.wave
+//- main
+//-   +wave()
+//-   +wave()
+//-   +wave()
+//- footer
+//- include wave.pug
