--- a/src/configurable-waves-v2/index.pug
+++ b/src/configurable-waves-v2/index.pug
@@ -7,18 +7,18 @@ html
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css')
     link(rel='stylesheet', href='style.css')
   body
-    svg.vector-wave( xmlns="http://www.w3.org/2000/svg" viewBox="0 -100 100 100" preserveAspectRatio="none")
+    svg.vector-wave(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100")
       defs
         clipPath#view
-          rect(x='0' y='-100' width='100' height='100' fill='green')
+          rect(x='0' y='0' width='100' height='100' fill='green')
       path#wave
-      //- g(transform="translate(100, 0)")
-      //-   use(href="#wave")
-    main
-      .wave
-      .wave
-      .wave
-    footer
+      g(transform="translate(100, 0)")
+        use(href="#wave")
+    //- main
+    //-   .wave
+    //-   .wave
+    //-   .wave
+    //- footer
     //- include wave.pug
     .social-links
       a.social-link.social-link--twitter(href="https://twitter.com/jh3yy" target="_blank" rel="noopener noreferrer" title="Catch me on Twitter")
