--- a/src/lwj-corgi/style.styl
+++ b/src/lwj-corgi/style.styl
@@ -8,8 +8,12 @@ body
   min-height 100vh
   background hsl(130, 50%, 40%)
 
+// #party
+//   display none
+
 .corgi
   height 50vmin
+  overflow visible
 
   &__shadow
     opacity 0.5
@@ -18,6 +22,9 @@ body
   &__stroke
     stroke hsl(0, 0%, 10%)
     stroke-width 1px
+
+  &__cracker
+    display none
 
   &__cracker-primary
     fill hsl(280, 40%, 75%)
