--- a/src/scalectrix/style.styl
+++ b/src/scalectrix/style.styl
@@ -1,10 +1,197 @@
 *
   box-sizing border-box
+  transform-style preserve-3d
 
 :root
-  --path "M61.27.5c45.13.16 57.97 29.3 85.94 60.78 27.98 31.47 41.78 60.92 85.95 60.77 44.18-.16 60.78-32.13 60.78-60.78S275.48.55 233.16.5c-42.31-.05-58.15 30.76-85.95 60.78-27.8 30.01-42.4 60.6-85.93 60.77C17.74 122.21.5 89.93.5 61.28.5 32.63 16.14.34 61.27.5z"
+  --player-one "M61.27.5c45.13.16 68.384 25.592 96.354 57.072 27.98 31.47 41.564 54.925 75.536 54.478 33.972-.447 50.78-22.13 50.78-50.78 0-28.65-14.587-51.595-50.78-50.77-36.193.825-60.4 17.052-88.2 47.072-27.8 30.01-40.15 64.308-83.68 64.478C17.74 122.21.5 89.93.5 61.28.5 32.63 16.14.34 61.27.5z"
+  --player-two "M61.27 10.5c35.51-.132 57.97 19.3 85.94 50.78 27.98 31.47 41.78 60.92 85.95 60.77 44.18-.16 60.78-32.13 60.78-60.78S275.48.55 233.16.5C190.85.45 179.091 35.76 151.291 65.78c-27.8 30.01-56.388 46.395-90.011 46.269-33.623-.127-50.78-22.12-50.78-50.77 0-28.65 15.26-50.649 50.77-50.78z"
+  --bridge-height 20
+  --scale 1
+  --angle -48
+  --bank 150
+
+  @media(min-width 768px)
+    --bridge-height 40
+    --scale 2
+    --angle -33
+    --bank 120
+
+.cuboid {
+  // Defaults
+  --width: 15;
+  --height: 10;
+  --depth: 4;
+  height: calc(var(--depth) * 1px);
+  width: calc(var(--width) * 1px);
+  transform-style: preserve-3d;
+  position: absolute;
+  font-size: 1rem;
+  transform: translate3d(calc(var(--x, 0) * 1px), calc(var(--y, 0) * 1px), calc(var(--z, 0) * 1px)) rotate(calc(var(--r, 0) * 1deg));
+}
+.cuboid > div:nth-of-type(1) {
+  height: calc(var(--height) * 1px);
+  width: 100%;
+  transform-origin: 50% 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotateX(-90deg) translate3d(0, 0, calc((var(--depth) / 2) * 1px));
+}
+.cuboid > div:nth-of-type(2) {
+  height: calc(var(--height) * 1px);
+  width: 100%;
+  transform-origin: 50% 50%;
+  transform: translate(-50%, -50%) rotateX(-90deg) rotateY(180deg) translate3d(0, 0, calc((var(--depth) / 2) * 1px));
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+.cuboid > div:nth-of-type(3) {
+  height: calc(var(--height) * 1px);
+  width: calc(var(--depth) * 1px);
+  transform: translate(-50%, -50%) rotateX(-90deg) rotateY(90deg) translate3d(0, 0, calc((var(--width) / 2) * 1px));
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+.cuboid > div:nth-of-type(4) {
+  height: calc(var(--height) * 1px);
+  width: calc(var(--depth) * 1px);
+  transform: translate(-50%, -50%) rotateX(-90deg) rotateY(-90deg) translate3d(0, 0, calc((var(--width) / 2) * 1px));
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+.cuboid > div:nth-of-type(5) {
+  height: calc(var(--depth) * 1px);
+  width: calc(var(--width) * 1px);
+  transform: translate(-50%, -50%) translate3d(0, 0, calc((var(--height) / 2) * 1px));
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+.cuboid > div:nth-of-type(6) {
+  height: calc(var(--depth) * 1px);
+  width: calc(var(--width) * 1px);
+  transform: translate(-50%, -50%) translate3d(0, 0, calc((var(--height) / 2) * -1px)) rotateX(180deg);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.bridge
+  height 44px
+  width 100px
+  background hsla(180, 50%, 50%, 0.5)
+  position absolute
+  top 50%
+  left 50%
+  transform translate(-50%, -50%) rotate(47deg) translate(0px, -4px)
+
+  &__top
+    --width 40
+    --x 30
+
+    &--center
+      --height 4
+      --depth 44
+      --z calc((var(--bridge-height) + 4) * -1)
+      --y 0
+      --r 0
+
+      div
+        background red
+
+    &--fence
+      --height 10
+      --depth 5
+      --z calc((var(--bridge-height) + 6) * -1)
+      --y 0
+      --r 0
+
+      div
+        background purple
+
+    &--right
+      --y 39
+
+  &__pillar
+    --width 4
+    --depth 44
+    --height var(--bridge-height)
+    --z calc(var(--bridge-height) * -0.5)
+    div
+      background blue
+
+    &--one
+      --x 30
+      --y 0
+    &--two
+      --x 66
+      --y 0
+
+  &__ramp
+    --depth 44
+    --height calc(var(--bridge-height) + 7)
+    --width 26
+    --z calc((var(--bridge-height) + 6) * -0.5)
+
+    &--one
+      --x 0
+      --width 30
+      --y 0
+
+    &--two
+      --x 70
+      --width 30
+      --y 0
+      --r 180
+
+    div
+      background pink
+
+      &:nth-of-type(1)
+      &:nth-of-type(2)
+      &:nth-of-type(5)
+      &:nth-of-type(6)
+        background transparent
+
+      &:nth-of-type(1)
+        --clip polygon(0 0, 100% 100%, 100% 0)
+      &:nth-of-type(2)
+        --clip polygon(100% 0, 0 100%, 0 0)
+
+      &:nth-of-type(1)
+      &:nth-of-type(2)
+        &:after
+          content ''
+          position absolute
+          top 0
+          left 0
+          right 0
+          bottom 0
+          background red
+          -webkit-clip-path var(--clip)
+          clip-path var(--clip)
+
+      &:nth-of-type(4)
+        background transparent
+        &:after
+          content ''
+          position absolute
+          top 0
+          left 0
+          right 0
+          height calc(var(--bank, 100) * 1%)
+          background purple
+          transform-origin 50% 0%
+          transform rotateX(calc(var(--angle) * 1deg))
 
 .race
+  transform rotateX(-34deg) rotateY(-34deg) rotateX(-90deg) scale(var(--scale))
+  // transform rotateX(-0deg) rotateY(0deg) rotateX(180deg) scale(3)
+
+.track
   // 294.438 x 122.550
   --width 294.438px
   --height 122.550px
@@ -12,9 +199,9 @@
   width var(--width)
   background hsla(280, 50%, 50%, 0.5)
   position relative
-  transform scale(3)
 
-
+.track__piece
+  transform translate3d(0, 0, 0)
 .road
 .burm
 .markings
@@ -38,29 +225,105 @@
   --color hsl(45, 80%, 50%)
 
 .burm
-  --width 24px
+  --width 50px
   --color hsl(130, 80%, 50%)
 
 .car
   height 10px
   width 10px
-  background red
+  background 'hsl(%s, 80%, 50%)' % var(--hue, 0)
   offset-path path(var(--path))
-  // animation travel 10s infinite linear
+  animation-iteration-count infinite
   offset-distance 1%
   position absolute
-  transform translate(0, 0)
+  transform-style preserve-3d
   top 0px
   left 0px
+
+  &--one
+    --hue 280
+    --speed 3
+    --delay -0.3
+    --path var(--player-one)
+    animation travel calc(var(--speed) * 1s) calc(var(--delay, 0) * 1s) linear, bridge--one calc(var(--speed) * 1s) calc(var(--delay, 0) * 1s) linear
+    animation-iteration-count infinite
+    .car__plane
+      animation-name rock--one
+  &--two
+    --hue 180
+    --speed 3
+    --delay -0.8
+    --path var(--player-two)
+    animation travel calc(var(--speed) * 1s) calc(var(--delay, 0) * 1s) linear, bridge--two calc(var(--speed) * 1s) calc(var(--delay, 0) * 1s) linear
+    animation-iteration-count infinite
+
+    .car__plane
+      animation-name rock--two
+
+  &__plane
+    position relative
+    height 100%
+    width 100%
+    animation-duration calc(var(--speed, 0) * 1s)
+    animation-delay calc(var(--delay, 0) * 1s)
+    animation-iteration-count infinite
+    animation-timing-function linear
+
+  &__body
+    --height 10
+    --width 12
+    --depth 8
+    --z -6
+    --x -2
+    --y 1
+    div
+      background orange
 
 @keyframes travel
   from
     offset-distance 0
   to
-    offset-distance 300%
+    offset-distance 100%
+
+@keyframes bridge--one
+  0%, 7%, 21%, 100%
+    transform translate3d(0, 0, -1px)
+  11%, 17.5%
+    transform translate3d(0, 0, calc((var(--bridge-height) + 9) * -1px))
+
+@keyframes bridge--two
+  0%, 6.25%, 20%, 100%
+    transform translate3d(0, 0, -1px)
+  10%, 16.5%
+    transform translate3d(0, 0, calc((var(--bridge-height) + 9) * -1px))
+
+@keyframes rock--one
+  0%, 6.9%, 11.1%, 17.4%, 21.1%, 100%
+    transform-origin 50% 50%
+    transform rotateY(0deg)
+  7%, 11%
+    transform-origin 0 50%
+    transform rotateY(45deg)
+  17.5%, 21%
+    transform-origin 100% 50%
+    transform rotateY(-45deg)
+
+@keyframes rock--two
+  0%, 6.15%, 10.1%, 16.4%, 20.1%, 100%
+    transform-origin 50% 50%
+    transform rotateY(0deg)
+  6.25%, 10%
+    transform-origin 0 50%
+    transform rotateY(45deg)
+  16.5%, 20%
+    transform-origin 100% 50%
+    transform rotateY(-45deg)
+
+
 
 body
   min-height 100vh
   display flex
   align-items center
   justify-content center
+  perspective 1000px
