feat: scalextric updates pre car bodies

--- a/src/scalectrix/dev.pug
+++ b/src/scalectrix/dev.pug
@@ -26,7 +26,7 @@ mixin cuboid(className)
       +cuboid('bridge__ramp bridge__ramp--two')
     .car.car--one
       .car__plane
-        +cuboid('car__body')
+        //- +cuboid('car__body')
     .car.car--two
       .car__plane
-        +cuboid('car__body')
+        //- +cuboid('car__body')
